# ncrdriver

./: README.md
c++/: CMakeLists.txt  Makefile  async  main.cpp  testparams
image/: hextextmeme.txt  hextextsmallface.txt
libqrencode/: Makefile  aclocal.m4  bitstream.lo  config.h  config.h.in~  config.status  configure  libqrencode.la  libqrencode.pc  libtool  mask.lo  mmask.lo  mqrspec.lo  qrencode  qrencode.lo  qrencode.spec  qrinput.lo  qrspec.lo  rscode.lo  split.lo
libqrencode/.deps/: bitstream.Plo  mask.Plo  mmask.Plo  mqrspec.Plo  qrencode-qrenc.Po  qrencode.Plo  qrinput.Plo  qrspec.Plo  rscode.Plo  split.Plo
libqrencode/.libs/: libqrencode.lai  qrencode
libqrencode/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
libqrencode/lib/: libqrencode.so.3.4.1
libqrencode/share/man/man1/: qrencode.1
libqrencode/tests/: Makefile
